ignoring result of `nix build` command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,3 +34,5 @@ add_executable(bfi ${SRC_FILES})
 if (NON_STD_CMDS)
     target_compile_definitions(bfi PUBLIC NON_STD_CMDS)
 endif()
+
+install(TARGETS bfi DESTINATION bin)
